feat: Implement document and chunk management in the vector database
- Added CRUD operations for documents and their associated chunks in `crud.py`.
- Introduced Pydantic schemas for data validation and serialization in `schemas.py`.
- Created endpoint response logs for testing document and chunk operations in `database_endpoint_responses.log`.
- Developed search functionality with logging for search queries and results in `search_endpoint_responses.log`.
- Added logging for pipeline endpoint responses to track processing and storage operations.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,7 +19,8 @@ nav:
           - Référence (auto): lib_pipeline.md
 
   - Integrations:
-      - JavaScript / TypeScript: Integration/js-vectordb.md   # ← casse corrigée
+      - JavaScript / TypeScript: 
+        - vectordb: Integration/vectordb.md  
 
 theme:
   name: readthedocs
