--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,9 @@ dependencies = [
     "ruff>=0.11.7",
 ]
 
+[tool.pytest.ini_options]
+pythonpath = "."
+
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["clea_doc_loader", "clea_vectordb", "clea_pipeline"]
