--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "clea-api"
-version = "0.1.2"
+version = "0.2.0"
 description = "Cléa-API: A framework for document load and hybrid search engine combining vector and metadata-based search. CRUD operations are performed using FastAPI."
 readme = { file = "README.md", content-type = "text/markdown" }
 requires-python = ">=3.11"
@@ -46,6 +46,12 @@ dependencies = [
 
 [tool.pytest.ini_options]
 pythonpath = "."
+# Configuration pytest-asyncio
+asyncio_mode = "strict"
+asyncio_default_fixture_loop_scope = "function"
+asyncio_default_test_loop_scope = "function"
+# Limiter anyio à asyncio uniquement
+anyio_backend = "asyncio"
 
 [tool.setuptools.packages.find]
 where = ["."]
