feat: Add Docker setup script for Cléa-API installation and configuration
- Implemented a bash script (docker_setup.sh) for installing and configuring Cléa-API in Docker environments.
- Added functions for preloading models (CamemBERT, Cross-Encoder, Qwen3-0.6B) in Docker mode.
- Enhanced logging with color-coded messages for better visibility during installation.

docs: Create documentation for stats_computer module

- Added comprehensive documentation (stats_computer_js.md) detailing the Pydantic schemas and StatsComputer class.
- Included examples for each method and best practices for using the statistics module.

feat: Implement statistics API endpoints for Cléa-API

- Created a FastAPI router (stats_api_endpoint.py) to expose endpoints for document, search, and system statistics.
- Implemented endpoints for retrieving aggregated statistics for the dashboard.

feat: Develop StatsComputer class for calculating statistics

- Introduced StatsComputer class (stats_src_compute.py) to centralize the calculation of various statistics.
- Implemented methods for computing document stats, search stats, system stats, and all stats.

test: Add unit tests for statistics computation

- Created test suite (test_src_compute.py) to validate the functionality of the StatsComputer class.
- Implemented logging for test results and added data generation for testing purposes.

feat: Implement index cleaner for orphaned vector indexes

- Developed index_cleaner.py to identify and remove orphaned vector indexes and configurations from the database.
- Added scheduling functionality for periodic cleanup of orphaned indexes using APScheduler.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,9 @@ nav:
       - vectordb:
           - Opérations CRUD: lib/vectordb/crud_lib.md
           - Indexation vectorielle: lib/vectordb/index_lib.md
-          - Recherche hybride: lib/vectordb/search_lib.md
+          - Recherche hybride: lib/stats/stats_computer_lib.md
+      - stats:
+          - Statistiques: lib/stats/stats_lib.md
 
   - Références API:
       - REST API:
@@ -41,6 +43,8 @@ nav:
               - CRUD: api/lib/vectordb/crud_references.md
               - Indexation: api/lib/vectordb/index_references.md
               - Recherche: api/lib/vectordb/search_references.md
+          - stats:
+              - Statistiques: api/lib/stats/stats_computer_references.md
 
   - Intégrations:
       - JavaScript / TypeScript:
@@ -54,6 +58,8 @@ nav:
               - Opérations CRUD: Integration/vectordb/crud_js.md
               - Indexation: Integration/vectordb/index_js.md
               - Recherche: Integration/vectordb/search_js.md
+          - stats:
+              - Statistiques: Integration/stats/stats_computer_js.md
 
 theme:
   name: readthedocs
