--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,63 @@
+accelerate==1.6.0
+alabaster==1.0.0
 annotated-types==0.7.0
 anyio==4.9.0
+apscheduler==3.11.0
+astdoc==1.2.1
+attrs==25.3.0
+babel==2.17.0
+backrefs==5.8
+beautifulsoup4==4.13.4
+bitsandbytes==0.45.5
+bs4==0.0.2
 certifi==2025.4.26
 charset-normalizer==3.4.1
 click==8.1.8
+colorama==0.4.6
 dnspython==2.7.0
+docutils==0.21.2
 email-validator==2.2.0
+essentials==1.1.6
+essentials-openapi==1.2.0
 fastapi==0.115.12
 fastapi-cli==0.0.7
 filelock==3.18.0
 fsspec==2025.3.2
+ghp-import==2.1.0
 git-cliff==2.8.0
 greenlet==3.2.1
+griffe==1.7.3
 h11==0.16.0
+hf-xet==1.1.0
 httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
 huggingface-hub==0.30.2
 idna==3.10
+imagesize==1.4.1
 iniconfig==2.1.0
-jinja2==3.1.6
+isodate==0.7.2
+jinja2==3.1.4
 joblib==1.4.2
+jsonschema>=4.18.0
+jsonschema-spec>=0.1.6
+lazy-object-proxy==1.11.0
+lxml==5.4.0
+markdown==3.8
 markdown-it-py==3.0.0
 markupsafe==3.0.2
 mdurl==0.1.2
+mergedeep==1.3.4
+mkdocs==1.6.1
+mkdocs-autorefs==1.4.1
+mkdocs-get-deps==0.2.0
+mkdocs-material==9.6.12
+mkdocs-material-extensions==1.3.1
+mkdocstrings==0.29.1
+mkdocstrings-python==1.16.10
+more-itertools==10.7.0
 mpmath==1.3.0
+neoteroi-mkdocs==1.1.2
 networkx==3.4.2
 numpy==2.2.5
 nvidia-cublas-cu12==12.6.4.1
@@ -40,47 +74,88 @@ nvidia-cusparselt-cu12==0.6.3
 nvidia-nccl-cu12==2.26.2
 nvidia-nvjitlink-cu12==12.6.85
 nvidia-nvtx-cu12==12.6.77
+openapi-core>=0.19.0
+openapi-markdown==0.4.3
+openapi-schema-validator>=0.6.0
+openapi-spec-validator>=0.7.1
+outcome==1.3.0.post0
 packaging==25.0
+paginate==0.5.7
+parse==1.20.2
+pathable==0.4.4
+pathspec==0.12.1
 pgvector==0.4.1
 pillow==11.2.1
+platformdirs==4.3.7
 pluggy==1.5.0
-psycopg2-binary==2.9.10
+protobuf==6.30.2
+psutil==7.0.0
+psycopg==3.2.7
+psycopg-binary==3.2.7
 pydantic==2.11.3
 pydantic-core==2.33.1
 pygments==2.19.1
+pymdown-extensions==10.15
+pypdf==5.4.0
+pyrsistent==0.20.0
 pytest==8.3.5
+pytest-asyncio==0.26.0
+python-dateutil==2.9.0.post0
+python-docx==1.1.2
 python-dotenv==1.1.0
 python-multipart==0.0.20
 pyyaml==6.0.2
+pyyaml-env-tag==0.1
 regex==2024.11.6
 requests==2.32.3
+rfc3339-validator==0.1.4
 rich==14.0.0
 rich-toolkit==0.14.3
+roman-numerals-py==3.1.0
 ruff==0.11.7
 safetensors==0.5.3
+schedule==1.2.2
 scikit-learn==1.6.1
 scipy==1.15.2
 sentence-transformers==4.1.0
 sentencepiece==0.2.0
 setuptools==80.0.0
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
+snowballstemmer==2.2.0
+sortedcontainers==2.4.0
+soupsieve==2.7
+sphinx==8.2.3
+sphinx-autodoc-typehints==3.2.0
+sphinx-rtd-theme==3.0.2
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-httpdomain==1.8.1
+sphinxcontrib-jquery==4.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
 sqlalchemy==2.0.40
 starlette==0.46.2
 sympy==1.14.0
 threadpoolctl==3.6.0
 tokenizers==0.21.1
 torch==2.7.0
+torchvision==0.22.0
 tqdm==4.67.1
 transformers==4.51.3
+trio==0.30.0
 triton==3.3.0
 typer==0.15.3
 typing-extensions==4.13.2
 typing-inspection==0.4.0
+tzlocal==5.3.1
 urllib3==2.4.0
 uvicorn==0.34.2
 uvloop==0.21.0
+watchdog==6.0.0
 watchfiles==1.0.5
 websockets==15.0.1
-apscheduler==3.10.1
-hf_xet==1.1.0
+werkzeug==3.1.3
