Add multilingual Cross-Encoder model for MS Marco and enhance ranking functionality
- Introduced a new Cross-Encoder model based on mMiniLMv2 for multilingual MS Marco.
- Added model configuration and README documentation for usage with SentenceTransformers and Transformers.
- Implemented robust model loading with fallback strategies for local and Hugging Face models.
- Enhanced device configuration to prioritize GPU usage and added memory checks.
- Improved error handling during model prediction and ranking processes.
- Updated dependencies in `uv.lock` to version 0.2.2.
- Created a shell script to wait for the database service.

--- a/.gitignore
+++ b/.gitignore
@@ -81,9 +81,8 @@ mkdocs.yml
 site/
 site/*
 
-models/embeddings/*
-models/llm/*
-models/reranking/*
+
+models/*
 
 # local Docker files configuration
 docker
